--- a/app/src/main/res/layout/item_part_booking3_checkin3.xml
+++ b/app/src/main/res/layout/item_part_booking3_checkin3.xml
@@ -15,6 +15,7 @@
     app:cardCornerRadius="10dp">
 
     <FrameLayout
+        android:id="@+id/ly_parts"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
