--- a/app/src/main/res/layout/activity_cash_collection_.xml
+++ b/app/src/main/res/layout/activity_cash_collection_.xml
@@ -136,14 +136,16 @@
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/tl_setor"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/spacing_medium"
-                android:textAlignment="center">
+                android:textAlignment="center"
+                app:helperTextEnabled="true">
 
                 <EditText
-                    android:id="@+id/et_total_cashCollection"
+                    android:id="@+id/et_jumlah_setor"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="JUMLAH SETOR"
@@ -151,6 +153,25 @@
                     android:textSize="14sp" />
 
             </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/spacing_medium"
+                android:textAlignment="center"
+                android:visibility="gone">
+
+                <EditText
+                    android:id="@+id/et_penerima"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="PENERIMA"
+                    android:inputType="textCapCharacters"
+                    android:textSize="14sp" />
+
+            </android.support.design.widget.TextInputLayout>
+
 
             <android.support.design.widget.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
