--- a/app/src/main/res/layout/activity_detail_part_diterima.xml
+++ b/app/src/main/res/layout/activity_detail_part_diterima.xml
@@ -31,7 +31,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:orientation="vertical"
-            tools:context=".modules.sparepart.DetailPartDiterima">
+            tools:context=".modules.sparepart.AturDetail_TerimaPart_Activity">
 
             <android.support.design.widget.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
