--- a/app/src/main/res/layout/activity_jumlah_harga_part_.xml
+++ b/app/src/main/res/layout/activity_jumlah_harga_part_.xml
@@ -102,11 +102,13 @@
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
+                    android:id="@+id/tl_jumlah_part"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:hint="JUMLAH">
+                    android:hint="JUMLAH"
+                    app:helperTextEnabled="true">
 
                     <EditText
                         android:id="@+id/et_jumlah_jumlah_harga_part"
