--- a/app/src/main/res/layout/activity_detail_kerja_mekanik.xml
+++ b/app/src/main/res/layout/activity_detail_kerja_mekanik.xml
@@ -42,12 +42,30 @@
                     android:background="@drawable/btn_rounded_accent"
                     android:textColor="@android:color/white"/>
 
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/paddingMedium">
+
                 <Button
                     android:id="@+id/btn_lkk"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/lkk_claim_uppercase"
+                    android:background="@drawable/btn_rounded_accent"
+                    android:textColor="@android:color/white"/>
+
+                <Button
+                    android:id="@+id/btn_tambah_part"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/tambah_part_uppercase"
                     android:background="@drawable/btn_rounded_accent"
                     android:textColor="@android:color/white"/>
 
