--- a/app/src/main/res/layout/activity_atur_schedule.xml
+++ b/app/src/main/res/layout/activity_atur_schedule.xml
@@ -139,17 +139,65 @@
                         android:orientation="horizontal"
                         android:padding="@dimen/paddingMedium">
 
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+
+                        </LinearLayout>
+
+                        <TextView
+                            android:layout_width="5dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_weight="1"
+                            android:layout_marginRight="10dp"
+                            android:drawableLeft="@drawable/icon_tanggal"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="5dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_weight="1"
+                            android:layout_marginRight="5dp"
+                            android:drawableLeft="@drawable/icon_tanggal"
+                            android:textStyle="bold" />
+
                         <TextView
                             android:id="@+id/tv_tanggal"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_weight="4"
-                            android:drawableLeft="@drawable/icon_tanggal"
                             android:gravity="center"
                             android:textColor="@color/grey_900"
                             android:textSize="12sp"
+                            android:hint="DD/MM/YY"
                             android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="3dp"
+                            android:layout_marginRight="3dp"
+                            android:text="-"
+                            android:textSize="12sp" />
+
+                        <TextView
+                            android:id="@+id/tv_tanggal2"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_weight="4"
+                            android:gravity="center"
+                            android:textColor="@color/grey_900"
+                            android:textSize="12sp"
+                            android:hint="DD/MM/YY"
+                            android:textStyle="bold"
+                            android:enabled="false"/>
 
                     </LinearLayout>
 
@@ -228,7 +276,7 @@
                             android:layout_weight="4"
                             android:drawableLeft="@drawable/icon_jam"
                             android:gravity="center"
-                            android:text="MULAI"
+                            android:hint="MULAI"
                             android:textColor="@color/grey_900"
                             android:textSize="12sp"
                             android:textStyle="bold"
@@ -250,11 +298,10 @@
                             android:layout_weight="4"
                             android:drawableRight="@drawable/icon_jam"
                             android:gravity="center"
-                            android:text="SELESAI"
+                            android:hint="SELESAI"
                             android:textColor="@color/grey_900"
                             android:textSize="12sp"
-                            android:textStyle="bold"
-                           />
+                            android:textStyle="bold"     />
 
                     </LinearLayout>
 
@@ -290,6 +337,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:text="COPY KE BULAN BERIKUTNYA"
+                            android:enabled="false"
                             android:textSize="12sp"/>
 
                     </LinearLayout>
